--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "bootstrap": "4.6",
+    "bootstrap": "^5.3.1",
     "firebase": "^9.23.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
