--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run code-mastery-lab:serve-ssr",
+    "serve:ssr": "node dist/code-mastery-lab/server/main.js",
+    "build:ssr": "ng build && ng run code-mastery-lab:server",
+    "prerender": "ng run code-mastery-lab:prerender"
   },
   "private": true,
   "dependencies": {
@@ -18,9 +22,11 @@
     "@angular/forms": "~13.3.0",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
+    "@angular/platform-server": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@nguniversal/express-engine": "^13.1.1",
     "bootstrap": "^5.3.1",
+    "express": "^4.15.2",
     "firebase": "^9.23.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -31,6 +37,8 @@
     "@angular/cli": "~13.3.9",
     "@angular/compiler-cli": "~13.3.0",
     "@angular/localize": "^13.3.12",
+    "@nguniversal/builders": "^13.1.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
